# ubuntu

./: .gitmodules  README.md
ampsdk/: .gitignore
application/: application.mk
application/app_gpio/: Makefile  app_gpio.mk  build.sh  gpio.c
application/app_smbox/: Makefile  app_smbox.mk  build.sh  smbox.c
application/ftsbox/: CMakeLists.txt  flash_ts.h  log.cpp  log.h  main_devinfo.cpp  readme  toolchain-aarch64.cmake
application/isp_pqtool/: Makefile  build.sh  isp_pqtool.mk
application/libsynav4l2/: Makefile  build.sh  libsynav4l2.mk  meson.build
application/libsynav4l2/inc/: v4l2_api.h  v4l2_buffer.h  v4l2_event.h  v4l2_ioctrl.h  v4l2_log.h  v4l2_m2m.h  v4l2_m2m_cam.h  v4l2_m2m_dec.h  v4l2_m2m_enc.h  v4l2_misc.h  v4l2_stream.h  v4l2_types.h
application/libsynav4l2/src/: v4l2_api.c  v4l2_buffer.c  v4l2_event.c  v4l2_ioctrl.c  v4l2_m2m.c  v4l2_m2m_cam.c  v4l2_m2m_dec.c  v4l2_m2m_enc.c  v4l2_misc.c  v4l2_stream.c
application/libsynav4l2/src/cam/: CamBuffer.cpp  CamBuffer.h  CamCompIntf.cpp  CamCompIntf.h  CamDewarpComp.cpp  CamDewarpComp.h  CamDnsComp.cpp  CamDnsComp.h  CamIspComp.cpp  CamIspComp.h  CamPipeline.cpp  CamPipeline.h  CamRotateComp.cpp  CamRotateComp.h  cam_config_parser.cpp  cam_config_parser.h  cam_config_reader.cpp  cam_config_reader.h  cam_stream.cpp  cam_stream.h
application/ota_api/: Makefile  build.sh  ota_api.mk
application/powermanaged/: Makefile  Makefile.rule  build.sh  powermanaged.mk
application/test_ota/: Makefile  build.sh  test_ota.c  test_ota.mk
application/test_spi/: Makefile  build.sh  spidev_test.c  test_spi.mk
application/test_standby/: Makefile  build.sh  test_standby.c  test_standby.mk
application/v4l2test/: Makefile  build.sh  meson.build  v4l2test.cpp  v4l2test.mk
application/v4l2test/V4L2/: V4L2Interface.cpp  V4L2Interface.h
application/v4l2test/v4l2dec-test/: Makefile  h264_auparser.c  h264_auparser.h  meson.build  tsemaphore.c  v4l2dec.c  v4l2dec.h  v4l2dec_test.c
application/v4l2test/v4l2enc-test/: Makefile  meson.build  v4l2enc_test.c  v4l2enc_test.h
application/voicecapture/: Makefile  build.sh  voicecapture-hidraw.c  voicecapture.mk
application/watchdogd/: Makefile  build.sh  watchdogd.mk
boot/: .gitignore
boot/bootloader/: BUILD_NUMBER  Makefile  build.sh
boot/common/: chipversions
configs/: update_conf.sh
configs/product/: README
custbuild/: build_c02.sh  build_evk.sh  build_sdboot_c05.sh  build_sdboot_evk.sh
custbuild/base/: base.sh  (+2 more)
drm/: .gitignore
senary/NPUDemo/ubuntu-yolov5s/: CMakeLists.txt  README
senary/NPUDemo/ubuntu-yolov5s/app/synap_cli/: main.cpp
senary/NPUDemo/ubuntu-yolov5s/app/synap_cli_ip/: CMakeLists.txt  main.cpp
senary/NPUDemo/ubuntu-yolov5s/app/synap_cli_od/: CMakeLists.txt
senary/NPUDemo/ubuntu-yolov5s/app/synap_cli_yolov5/: CMakeLists.txt  main.cpp
senary/NPUDemo/ubuntu-yolov5s/cmake/modules/: FindAlsa.cmake  FindPortAudio.cmake  FindVSSDK.cmake  Findsynap_device.cmake
senary/NPUDemo/ubuntu-yolov5s/cmake/toolchain/: linux_baseline_toolchain.cmake  linux_host_toolchain.cmake
senary/NPUDemo/ubuntu-yolov5s/lib/synap_app/inc/synap/: arg_parser.hpp
senary/NPUDemo/ubuntu-yolov5s/lib/synap_app/src/: arg_parser.cpp  label_info.cpp
senary/NPUDemo/ubuntu-yolov5s/lib/synap_base/src/: metadata.cpp
senary/NPUDemo/ubuntu-yolov5s/lib/synap_device/: CMakeLists.txt
senary/NPUDemo/ubuntu-yolov5s/lib/synap_postprocess/src/: detector.cpp
senary/NPUDemo/ubuntu-yolov5s/lib/synap_preprocess/src/: input_data.cpp
senary/NPUDemo/ubuntu-yolov5s/lib/synap_utils/: CMakeLists.txt
senary/NPUDemo/ubuntu-yolov5s/lib/synap_utils/inc/synap/: file_utils.hpp  string_utils.hpp
senary/NPUDemo/ubuntu-yolov5s/lib/synap_utils/src/: string_utils.cpp
senary/NPUDemo/ubuntu-yolov5s/lib/synapnb/: CMakeLists.txt
senary/NPUDemo/ubuntu-yolov5s/lib/synapnb/inc/synap/: network.hpp  tensor.hpp
senary/NPUDemo/ubuntu-yolov5s/lib/synapnb/src/: allocator_ion.cpp
senary/NPUDemo/ubuntu-yolov6s/lib/: CMakeLists.txt
senary/NPUDemo/ubuntu-yolov6s/lib/synap_app/inc/synap/: label_info.hpp
senary/NPUDemo/ubuntu-yolov6s/lib/synap_base/: CMakeLists.txt
senary/NPUDemo/ubuntu-yolov6s/lib/synap_base/src/: types.cpp
senary/NPUDemo/ubuntu-yolov6s/lib/synap_device/: CMakeLists_bak.txt
senary/NPUDemo/ubuntu-yolov6s/lib/synap_postprocess/: CMakeLists.txt
senary/NPUDemo/ubuntu-yolov6s/lib/synap_postprocess/inc/synap/: detector.hpp
senary/NPUDemo/ubuntu-yolov6s/lib/synap_postprocess/src/: classifier.cpp  image_postprocessor.cpp  json_utils.cpp
senary/NPUDemo/ubuntu-yolov6s/lib/synap_preprocess/: CMakeLists.txt
senary/NPUDemo/ubuntu-yolov6s/lib/synap_preprocess/inc/synap/: input_data.hpp
senary/NPUDemo/ubuntu-yolov6s/lib/synap_preprocess/src/: preprocessor.cpp
senary/NPUDemo/ubuntu-yolov6s/lib/synapnb/inc/synap/: allocator.hpp  buffer.hpp
senary/NPUDemo/ubuntu-yolov6s/lib/synapnb/src/: allocator_osal_secure.cpp  buffer.cpp  network_private.hpp  npu.cpp  predictor.cpp  tensor.cpp
synap/framework/: CMakeLists.txt
synap/framework/app/: CMakeLists.txt
synap/framework/app/synap_cli_nb/: CMakeLists.txt  main.cpp
synap/framework/app/synap_cli_od/: main.cpp
synap/framework/app/synap_init/: CMakeLists.txt
synap/framework/cmake/modules/: BuildConfig.cmake  FindJpeg.cmake  Findebg_utils.cmake  Findz.cmake
synap/framework/lib/synap_app/: CMakeLists.txt
synap/framework/lib/synap_base/: CMakeLists.txt
synap/framework/lib/synap_base/inc/: metadata.hpp
synap/framework/lib/synap_base/inc/synap/: types.hpp
synap/framework/lib/synap_img/: CMakeLists.txt
synap/framework/lib/synap_postprocess/src/: detector.cpp
synap/framework/lib/synap_preprocess/inc/synap/: preprocessor.hpp
synap/framework/lib/synap_utils/src/: file_utils.cpp
synap/framework/lib/synapnb/: CMakeLists.txt
synap/framework/lib/synapnb/src/: allocator_ion.hpp  allocator_synap.cpp  network.cpp
synap/framework/release/: CMakeLists.txt  README
synap/vsi_npu_driver/: CMakeLists.txt
synap/vsi_npu_driver/synap/kernel/: Kbuild
synap/vsi_npu_driver/synap/kernel/src/: synap_mem.c
ta_app/: ta_app.mk
(+2991 files in other folders)
